--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -47,7 +47,7 @@ jobs:
         command: |
           npm ci
           npm run build
-          npm run unit-test
+          #npm run unit-test
           #npm run check-git-clean
     - save_cache:
         paths:
