--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,7 +7,7 @@ jobs:
     - checkout
     - restore_cache:
         keys:
-        - node-{{ checksum "**/package-lock.json" }}
+        - node-{{ checksum "package-lock.json" }}
     - run:
         command: |
           npm ci
@@ -16,7 +16,7 @@ jobs:
     - save_cache:
         paths:
         - ~/.npm
-        key: node-{{ checksum "**/package-lock.json" }}
+        key: node-{{ checksum "package-lock.json" }}
   type-check:
     docker:
     - image: cimg/node:12.16
@@ -24,7 +24,7 @@ jobs:
     - checkout
     - restore_cache:
         keys:
-        - node-{{ checksum "**/package-lock.json" }}
+        - node-{{ checksum "package-lock.json" }}
     - run:
         command: |
           npm ci
@@ -34,7 +34,7 @@ jobs:
         paths:
         - ~/.npm
         - ~/.dts
-        key: node-{{ checksum "**/package-lock.json" }}
+        key: node-{{ checksum "package-lock.json" }}
   unit-test:
     docker:
     - image: cimg/node:12.16
@@ -42,7 +42,7 @@ jobs:
     - checkout
     - restore_cache:
         keys:
-        - node-{{ checksum "**/package-lock.json" }}
+        - node-{{ checksum "package-lock.json" }}
     - run:
         command: |
           npm ci
@@ -52,7 +52,7 @@ jobs:
     - save_cache:
         paths:
         - ~/.npm
-        key: node-{{ checksum "**/package-lock.json" }}
+        key: node-{{ checksum "package-lock.json" }}
   website:
     docker:
     - image: cimg/node:12.16
@@ -60,7 +60,7 @@ jobs:
     - checkout
     - restore_cache:
         keys:
-        - node-{{ checksum "**/package-lock.json" }}
+        - node-{{ checksum "package-lock.json" }}
     - run:
         command: |
           npm ci
@@ -69,7 +69,7 @@ jobs:
     - save_cache:
         paths:
         - ~/.npm
-        key: node-{{ checksum "**/package-lock.json" }}
+        key: node-{{ checksum "package-lock.json" }}
   publish:
     docker:
     - image: cimg/node:12.16
@@ -77,7 +77,7 @@ jobs:
     - checkout
     - restore_cache:
         keys:
-        - node-{{ checksum "**/package-lock.json" }}
+        - node-{{ checksum "package-lock.json" }}
     - run:
         command: |
           npm ci
@@ -86,7 +86,7 @@ jobs:
     - save_cache:
         paths:
         - ~/.npm
-        key: node-{{ checksum "**/package-lock.json" }}
+        key: node-{{ checksum "package-lock.json" }}
 workflows:
   CI:
     jobs:
